[gd_scene load_steps=4 format=3 uid="uid://but11d0umbq6s"]

[ext_resource type="LabelSettings" uid="uid://ceg01pptyu03b" path="res://assets/scenes/sk_48_red.tres" id="1_4og66"]
[ext_resource type="Script" path="res://assets/scenes/gameover/gameover.gd" id="1_pviw7"]
[ext_resource type="AudioStream" uid="uid://cip14xf1it2cc" path="res://assets/audio/game_over.wav" id="3_css02"]

[node name="gameover" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pviw7")

[node name="go_label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = ExtResource("1_4og66")

[node name="spacelabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "PRESS SPACE"
label_settings = ExtResource("1_4og66")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="crash_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_css02")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
